--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "user": "node index.js --username johnbrow --room sala01 --hostUri localhost",
-    "user01": "node index.js --username livian --room sala01 --hostUri localhost",
-    "user02": "node index.js --username padre --room sala01 --hostUri https://localhost:9815",
+    "user": "node index.js --username johnbrow --room sala01 --hostUri http://localhost:9898",
+    "user01": "node index.js --username livian --room sala01 --hostUri http://localhost:9898",
+    "user02": "node index.js --username padre --room sala01 --hostUri http://localhost:9898",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
