--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "user": "node index.js --username johnbrow --room sala01 --hostUri http://localhost:9898",
     "user01": "node index.js --username livian --room sala01 --hostUri http://localhost:9898",
-    "user02": "node index.js --username padre --room sala01 --hostUri http://localhost:9898",
+    "user03": "node index.js --username marcinha --room sala02 --hostUri http://localhost:9898",
+    "user04": "node index.js --username polenta --room sala02 --hostUri http://localhost:9898",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
