criando a flagg engines para que o servidro rode com a versao node 15

--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,9 @@
     "start": "node src/",
     "dev": "npx nodemon src/"
   },
+  "engines": {
+    "node": "15"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
